--- a/rwa/hw1/z1/style.css
+++ b/rwa/hw1/z1/style.css
@@ -2,8 +2,8 @@
 
 html {
     background-color: #999;
-    font-family: 'Foo', 'Arial';
-    margin: 5%;
+    font-family: 'Foo', 'Arial', 'Helvetica', 'sans-serif';
+    margin: 3%;
 }
 
 iframe {
@@ -51,7 +51,7 @@ iframe {
     border-radius: 15px;
     box-shadow: 0 5px #999;
     color: black;
-    font-family: 'Foo', 'Arial';
+    font-family: 'Foo', 'Arial', 'Helvetica', 'sans-serif';
 }
 
 .vote:active {
@@ -117,6 +117,11 @@ iframe {
     text-align: center;
 }
 
+.top5header p {
+    font-weight: bold;
+    font-size: 30px;
+}
+
 .top5row {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr 1fr;
@@ -132,4 +137,25 @@ iframe {
 
 .top5row:hover {
     background-color: #777;
+}
+
+div#rankings > p {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.video > p {
+    font-weight: bolder;
+    font-size: 20px;
+    font-family: 'Arial', 'Helvetica', 'sans-serif';
+}
+
+.footer {
+    float: right;
+    margin: 1%;
+}
+
+.footer a:link, .footer a:visited, .footer a:active {
+    color: black;
+    text-decoration: none;
 }
