--- a/rwa/hw1/z1/style.css
+++ b/rwa/hw1/z1/style.css
@@ -7,31 +7,32 @@ html {
 }
 
 iframe {
-    width: 320px;
-    height: 200px;
+    width: 520px;
+    height: 400px;
     padding-bottom: 1em;
 }
 
-.container {
-    background-color: #555;
+.voting {
+    background-color: #666;
     overflow: auto;
     white-space: nowrap;
     border-radius: 10px;
-    /* margin-bottom: 5%; */
+    margin-bottom: 5%;
     margin: 2% 2%;
+    padding-bottom: 2%;
 }
   
-.container .video {
+.voting .video {
     display: inline-block;
-    color: white;
     text-align: center;
+    color: white;
     padding: 10px;
     padding-bottom: 1em;
     text-decoration: none;
 }
   
-.container .video:hover {
-    background-color: #666;
+.voting:hover {
+    background-color: #555;
 }
 
 .video p {
@@ -41,7 +42,7 @@ iframe {
 .vote {
     display: block;
     margin-left: 40%;
-    padding: 8px 20px;
+    padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
