--- a/rwa/hw3/src/main/webapp/styles/main.css
+++ b/rwa/hw3/src/main/webapp/styles/main.css
@@ -52,9 +52,9 @@ iframe {
     font-family: 'Foo', 'Arial', 'Helvetica', 'sans-serif';
 }
 
-#addnew {
+#addnew, #newuser, .myform button {
     /*display: inline;*/
-    margin: 2% 2%;
+    margin: 1% 1%;
     padding: 1% 0;
     font-size: 20px;
     font-weight: bold;
@@ -149,12 +149,12 @@ iframe {
     }
 }
 
-#rankings {
+#rankings, #users {
     margin: 20px 30px;
     font-size: 25px;
 }
 
-#rankingsContainer {
+#rankingsContainer, #usersContainer {
     border-style: solid;
     display: grid;
     background-color: #888;
@@ -165,6 +165,14 @@ iframe {
     grid-template-columns: 1fr 3fr 1fr 1fr;
     align-items: center;
     text-align: center;
+}
+
+#usersContainer .top5header {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+#usersContainer .top5row {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .top5header p {
@@ -220,4 +228,38 @@ div#rankings > p {
     width: 90%;
     padding: 5% 0;
     font-weight: bold;
+}
+
+.login-form {
+    padding: 2%;
+    font-size: 25px;
+}
+
+.login-btn {
+    padding: 1% 0;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    background-color: lightskyblue;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 5px #999;
+    color: black;
+    font-family: 'Foo', 'Arial', 'Helvetica', 'sans-serif';
+    width: 15%;
+}
+
+.myform  {
+    padding: 2%;
+    font-size: 25px;
+}
+
+.myform input {
+    margin: 1%;
+}
+
+.myform .submit {
+    padding: 2%;
+    font-size: 30px;
 }
